fixed misnomer: collapse -> expand

--- a/trunk/v2/styles.css
+++ b/trunk/v2/styles.css
@@ -11,7 +11,7 @@
   width: 100%;
 }
 
-#wk_collapse {
+#wk_expand {
   background-image: url(img/menu_bg.png);
   position: absolute;
   z-index: 49000;
